2016-05-04  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Redesign font handling.

	At this early stage, it's not always clear to me how to do things
	correctly, so here's another try.

	* src/ftinspect.h (Font): Redesigned, using a list of 
	instance numbers.
	(FaceID): New structure, for communication with the face requester.
	(Engine): We need the `MainGUI' structure for initializing the face
	requester.
	(MainGUI): Make `faceRequester' a friend.
	Replace string list `fontFileNames' with `fonts', which is a list of
	`Font' elements.
	Add `currentInstanceIndex'.

	* src/ftinspect.cpp (faceRequester): Replace dummy code with
	something more serious.
	(Engine::Engine, Engine::update): Updated.
	(MainGUI::loadFonts, MainGUI::closeFont,
	MainGUI::checkCurrentFontIndex, MainGUI::checkCurrentFaceIndex,
	MainGUI::nextFont, MainGUI::nextFace):
	Updated to use new `fonts' member.
	(MainGUI::setDefaults, main): Updated.

2016-05-04  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Minor.

	* src/ftinspect.h, src/ftinspect.cpp:
	s/checkCurrentFontFileIndex/checkCurrentFontIndex/,
	s/currentFontFileIndex/currentFontIndex/.

2016-05-04  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Minor.

	* src/ftinspect.h (Engine): Add destructor.
	(MainGUI): Use point to `engine'.

	* src/ftinspect.cpp (Engine::~Engine): Implement.
	(MainGUI::update): Updated.

2016-05-04  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Better intertwine `Engine' and `MainGUI'.

	* src/ftinspect.cpp (MainGUI::update): New method.
	(main): Use it.

	* src/ftinspect.h (Engine): Make it a friend of `MainGUI'.
	(MainGUI): New member `engine'.
	Updated.

2016-05-04  Werner Lemberg  <wl@gnu.org>

	* src/ftinspect.cpp (MainGUI::loadFonts): Improve logic.

2016-05-04  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Make `previous face' and `next face' button logic work.

	It still does nothing, though.

	* src/ftinspect.h (MainGUI): New slots `checkCurrentFaceIndex',
	`previousFace, and `nextFace'.